k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:                  # <--- เพิ่มส่วนนี้
    app: todo-app
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30081
